Major update for Java 19 [...]
 - Update JMH plugin
 - Gradle updates for JDK 19
 - Update Panama benchmarks for new Panama API
 - Remove prebuilt kernel32 jar from jextract (not necessary, we define it all ourselves in Panama benchmarks)